<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/widget_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/widget_background_black"
                android:padding="@dimen/widget_margin">

    <!--android:background="#09C"-->

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxLines="1"
        android:contentDescription="@string/app_name"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/player_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/player_play_pause"
        android:layout_marginRight="50dp"
        android:layout_toLeftOf="@+id/player_play_pause"
        android:contentDescription="@string/content_description_previous_song"
        android:src="@drawable/ic_skip_previous_white_24dp"/>

    <ImageView
        android:id="@+id/player_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_textview"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description_play_or_pause"
        android:src="@drawable/ic_play_arrow_white_48dp"/>

    <ImageView
        android:id="@+id/player_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/player_play_pause"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/player_play_pause"
        android:contentDescription="@string/content_description_next_song"
        android:src="@drawable/ic_skip_next_white_24dp"/>

</RelativeLayout>